[tool.poetry]
name = "mochji-countbot"
version = "0.1.0"
description = "Counting bot for mochjicord"
authors = ["kevinshome <50159154+kevinshome@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.6.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
